--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,13 +1,14 @@
 .index {
   width: 100%;
+  height: 100%;
 }
 .index .index-head {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-image: url('../../static/head/head1.png');
   height: 360px;
+  background-image: url('../../static/head/head1.png');
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
 }
@@ -21,12 +22,12 @@
 .index .index-head .index-head-serach {
   display: flex;
   margin-left: 5%;
-  width: 45%;
+  width: 60%;
 }
 .index .index-head .index-head-serach .index-head-icon {
-  margin-top: 15px;
+  margin-top: 3.5%;
   margin-left: 10px;
-  z-index: 999;
+  z-index: 99;
 }
 .index .index-head .index-head-serach .index-head-input {
   height: 60px;
@@ -36,4 +37,17 @@
   background-color: #5cac57;
   border-radius: 30px;
   font-size: 30px;
+}
+.index .reservation-image {
+  padding-top: 1%;
+  width: 100%;
+  height: 150px;
+}
+.index .index-hot {
+  width: 100%;
+  margin-left: 2%;
+}
+.index .index-hot .index-hot-title {
+  font-size: 40px;
+  font-weight: bold;
 }
