--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,12 +1,13 @@
 .index {
     width: 100%;
+    height: 100%;
     .index-head {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        background-image: url('../../static/head/head1.png');
         height: 360px;
+        background-image: url('../../static/head/head1.png');
         border-bottom-left-radius: 50px;
         border-bottom-right-radius: 50px;
         .index-head-text {
@@ -19,11 +20,11 @@
         .index-head-serach {
             display: flex;
             margin-left: 5%;
-            width: 45%;
+            width: 60%;
             .index-head-icon {
-                margin-top: 15px;
+                margin-top: 3.5%;
                 margin-left: 10px;
-                z-index: 999;
+                z-index: 99;
             }
             .index-head-input {
                 height: 60px;
@@ -35,6 +36,21 @@
                 font-size: 30px;
             }
         }
-        
     }
+
+    .reservation-image {
+        padding-top: 1%;
+        width: 100%;
+        height: 150px;
+    }
+
+    .index-hot {
+        width: 100%;
+        margin-left: 2%;
+        .index-hot-title {
+            font-size: 40px;
+            font-weight: bold;
+        }
+    }
+    
 }
