--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,13 +1,15 @@
 .index {
     width: 100%;
     height: 100%;
+
+    // 搜索框
     .index-head {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 360px;
-        background-image: url('../../static/head/head1.png');
+        height: 360rpx;
+        background-image: url('../../static/head/head.png');
         border-bottom-left-radius: 50px;
         border-bottom-right-radius: 50px;
         .index-head-text {
@@ -38,18 +40,60 @@
         }
     }
 
+    // 预约入口
     .reservation-image {
         padding-top: 1%;
         width: 100%;
         height: 150px;
     }
 
-    .index-hot {
+    // 热门学校
+    .hot-school {
         width: 100%;
-        margin-left: 2%;
-        .index-hot-title {
-            font-size: 40px;
+        padding: 2%;
+        .title {
+            font-size: 35px;
             font-weight: bold;
+            color:rgb(121, 120, 120)
+        }
+        .container {
+            height: 220px;
+            .scrollItem {
+                width: 200px;
+                margin-right: 10px;
+                .scrollItem-image {
+                    width: 200px;
+                    height: 160px;
+                    border-radius:10px;
+                }
+                .scrollItem-text {
+                    font-size: 30px;
+                    // 单行文字溢出隐藏，省略号代替
+                    display: block;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+        }
+    }
+
+    // 学校列表
+    .school-list {
+        width: 100%;
+        padding: 2%;
+        .title {
+            font-size: 35px;
+            font-weight: bold;
+            color:rgb(121, 120, 120);
+        }
+        .more {
+            float: right;
+            margin-right: 4%;
+            font-size: 30px;
+            padding: 5px 10px;
+            border: 1px solid rgb(121, 120, 120);
+            border-radius: 10%;
         }
     }
     
