fix: 调整首页相关布局和样式

--- a/src/components/SchoolItem/index.css
+++ b/src/components/SchoolItem/index.css
@@ -21,8 +21,11 @@
   margin-bottom: 10px;
 }
 .container .school .school-address {
-  display: block;
   font-size: 30px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .container .school .school-distance {
   margin-bottom: 10px;
