--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3222299 */
-  src: url('//at.alicdn.com/t/font_3222299_0q45mcl5ml5.woff2?t=1646963550178') format('woff2'),
-       url('//at.alicdn.com/t/font_3222299_0q45mcl5ml5.woff?t=1646963550178') format('woff'),
-       url('//at.alicdn.com/t/font_3222299_0q45mcl5ml5.ttf?t=1646963550178') format('truetype');
+  src: url('//at.alicdn.com/t/font_3222299_sbr7bmcsaa.woff2?t=1647067100945') format('woff2'),
+       url('//at.alicdn.com/t/font_3222299_sbr7bmcsaa.woff?t=1647067100945') format('woff'),
+       url('//at.alicdn.com/t/font_3222299_sbr7bmcsaa.ttf?t=1647067100945') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shangla:before {
+  content: "\e609";
+}
+
+.icon-xiala:before {
+  content: "\e656";
 }
 
 .icon-weixin:before {
