--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,7 +3,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 100px;
+    height: 80%;
+    width: 100%;
+
     .logo-name {
         display: flex;
         justify-content: center;
@@ -116,7 +118,7 @@
         width: 25%;
         font-size: 36px;
         margin-bottom: 2%;
-        margin-top: -13.5%;
+        margin-top: -13.3%;
         margin-right: 11%;
         padding: 0;
         // border-radius: 10px;
