--- a/src/pages/login/login-guide/index.css
+++ b/src/pages/login/login-guide/index.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 100px;
+  height: 60%;
+  width: 100%;
 }
 .container .logo-name {
   display: flex;
