--- a/src/pages/login/login-guide/index.less
+++ b/src/pages/login/login-guide/index.less
@@ -3,7 +3,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 100px;
+    height: 60%;
+    width: 100%;
+    
     .logo-name {
         display: flex;
         justify-content: center;
