--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -77,7 +77,6 @@
         color: rgb(102, 102, 101);
         background-color: #fff;
         .personal-bottom-item {
-            height: 110px;
             border-bottom: 2px solid #ece9e9;
             line-height: 100px;
             padding: 0 20px;
@@ -87,6 +86,12 @@
             .iconfont {
                 font-size: 30px;
                 float: right;
+            }
+            .complete-information {
+                border: 2px solid red;
+                color: orangered;
+                padding: 5px;
+                margin-left: 45%;
             }
         }
     }
