--- a/src/pages/user/index.css
+++ b/src/pages/user/index.css
@@ -91,4 +91,12 @@
   color: orangered;
   padding: 5px;
   margin-left: 45%;
+  font-size: 33px;
+}
+.personal .personal-bottom .personal-bottom-item .realname-authentication {
+  border: 2px solid red;
+  color: orangered;
+  padding: 5px;
+  margin-left: 55%;
+  font-size: 33px;
 }
