--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -92,6 +92,14 @@
                 color: orangered;
                 padding: 5px;
                 margin-left: 45%;
+                font-size: 33px;
+            }
+            .realname-authentication {
+                border: 2px solid red;
+                color: orangered;
+                padding: 5px;
+                margin-left: 55%;
+                font-size: 33px;
             }
         }
     }
