--- a/src/pages/search/index.css
+++ b/src/pages/search/index.css
@@ -5,7 +5,7 @@
 .index .index-head {
   width: 100%;
   height: 100px;
-  margin-left: 3%;
+  padding: 2%;
   border-bottom: #eceaea solid 1px;
   display: flex;
   justify-content: center;
