--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -5,7 +5,8 @@
     .index-head {
         width: 100%;
         height: 100px;
-        margin-left: 3%;
+        // margin-left: 3%;
+        padding: 2%;
         border-bottom: rgb(236, 234, 234) solid 1px;
         display: flex;
         justify-content: center;
