--- a/src/pages/school/index.less
+++ b/src/pages/school/index.less
@@ -194,8 +194,117 @@
                         font-size: 33px;
                     }
                 }
+            }
 
-                
+            .comment {
+                padding: 2%;
+                font-size: 32px;
+                color: rgb(90, 89, 89);
+
+                .comment-item {
+                    width: 96%;
+                    margin: 2%;
+                    display: flex;
+                    padding-bottom: 10px;
+                    margin-bottom: 40px;
+                    border-bottom: 1px solid #f0f0f0;
+            
+                    // 左侧
+                    .comment-item-left {
+                        width: 15%;
+                        margin-right: 10px;
+            
+                        .avater {
+                            width: 112px;
+                            height: 112px;
+                            border-radius: 10px;
+                            background-color: rgb(218, 231, 169);
+                        }
+                    }
+            
+                    // 右侧
+                    .comment-item-right {
+                        display: flex;
+                        flex-direction: column;
+                        width: 85%;
+            
+                        // 发布人姓名
+                        .realname {
+                            width: 98%;
+                            margin: 1% 1% 0 1%;
+                            font-size: 35px;
+                            line-height: 50px;
+                            font-weight: bold;
+                            font-family: 'Courier New', Courier, monospace;
+                            color: #3b4977;
+                        }
+
+                        .place-info {
+                            font-size: 28px;
+                            margin-left: 10px;
+                        }
+            
+                        // 动态内容
+                        .content {
+                            width: 98%;
+                            margin: 1% 1%;
+                            font-size: 32px;
+                            line-height: 50px;
+                            color: #3b4977;
+                            background-color: white;
+                        }
+            
+                        // 图片列表区域
+                        .image-list {
+                            width: 98%;
+                            margin: 1% 1%;
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: wrap;
+            
+                           .image {
+                               width: 170px;
+                               height: 170px;
+                               margin: 0;
+                               background-color: rgb(218, 231, 169);
+                               margin-right: 10px;
+                               margin-bottom: 10px;
+                            } 
+                        }
+            
+                        // 时间区域
+                        .time-area {
+                            height: 70px;
+                            display: flex;
+                            align-items: center;
+                            position: relative;
+            
+                            .time {
+                                font-size: 26px;
+                                line-height: 70px;
+                                color: #696969;
+                            }
+            
+            
+                        }
+                    }
+                }
+
+                .noDate {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    color: #727171;
+
+                    .iconfont {
+                        font-size: 80px;
+                    }
+
+                    .noDate-text {
+                        font-size: 33px;
+                    }
+                }
             }
 
             .at-tabs__item {
@@ -219,7 +328,7 @@
         border: 1px solid #e0dddd;
         position: fixed;
         bottom: 0;
-        background-color: rgb(236, 234, 234);
+        background-color: rgb(248, 246, 246);
 
         .button {
             width: 60%;
@@ -227,6 +336,15 @@
             font-size: 35px;
             border-radius: 45px;
             background-color: rgb(0, 153, 255);
+        }
+
+        .disable-button {
+            width: 60%;
+            height: 80px;
+            color: black;
+            font-size: 35px;
+            border-radius: 45px;
+            background-color: rgb(188, 189, 190);
         }
     }
 }
