--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3222299 */
-  src: url('//at.alicdn.com/t/font_3222299_01stiujn8q65.woff2?t=1648529895753') format('woff2'),
-       url('//at.alicdn.com/t/font_3222299_01stiujn8q65.woff?t=1648529895753') format('woff'),
-       url('//at.alicdn.com/t/font_3222299_01stiujn8q65.ttf?t=1648529895753') format('truetype');
+  src: url('//at.alicdn.com/t/font_3222299_t5nrwgd04dn.woff2?t=1650180478539') format('woff2'),
+       url('//at.alicdn.com/t/font_3222299_t5nrwgd04dn.woff?t=1650180478539') format('woff'),
+       url('//at.alicdn.com/t/font_3222299_t5nrwgd04dn.ttf?t=1650180478539') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xuexiao_xuexiaoxinxi:before {
+  content: "\e661";
+}
+
+.icon-jiaobiaoxuanzhong:before {
+  content: "\eb0e";
 }
 
 .icon-wushuju:before {
