--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -10,6 +10,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
         .personal-top-image {
             width: 200px;
             height: 200px;
@@ -45,6 +46,7 @@
         font-size: 36px;
         color: rgb(102, 102, 101);
         background-color: #fff;
+
         .personal-middle-reservation {
             width: 50%;
             display: flex;
@@ -57,14 +59,30 @@
             }
         }
         .personal-middle-notice {
+            position: relative;
             width: 50%;
             display: flex;
             justify-content: center;
+
             .iconfont {
                 font-size: 45px;
                 padding-top: 10px;
                 margin-right: 10px;
-                
+            }
+
+            .unread-amount {
+                position: absolute;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 40px;
+                height: 40px;
+                font-size: 30px;
+                top: -10px;
+                right: 35px;
+                border-radius: 50%;
+                color: white;
+                background-color: red;
             }
         }
     }
